// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Example/Header LoggedIn smoke-test 2`] = `
<header>
  <div class="storybook-header">
    <div>
      <svg width="32"
           height="32"
           viewbox="0 0 32 32"
           xmlns="http://www.w3.org/2000/svg"
      >
        <g fill="none"
           fill-rule="evenodd"
        >
          <path d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
                fill="#FFF"
          >
          </path>
          <path d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
                fill="#555AB9"
          >
          </path>
          <path d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
                fill="#91BAF8"
          >
          </path>
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <span class="welcome">
        Welcome,
        <b>
          Jane Doe
        </b>
        !
      </span>
      <button type="button"
              class="font-['Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif] font-[700] border-0 rounded-[3em] cursor-pointer inline-block leading-none text-[12px] px-[16px] py-[10px] text-secondary bg-transparent shadow-[0_0_0_1px_rgba(0,0,0,0.15)]"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Example/Header LoggedOut smoke-test 2`] = `
<header>
  <div class="storybook-header">
    <div>
      <svg width="32"
           height="32"
           viewbox="0 0 32 32"
           xmlns="http://www.w3.org/2000/svg"
      >
        <g fill="none"
           fill-rule="evenodd"
        >
          <path d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
                fill="#FFF"
          >
          </path>
          <path d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
                fill="#555AB9"
          >
          </path>
          <path d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
                fill="#91BAF8"
          >
          </path>
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button type="button"
              class="font-['Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif] font-[700] border-0 rounded-[3em] cursor-pointer inline-block leading-none text-[12px] px-[16px] py-[10px] text-secondary bg-transparent shadow-[0_0_0_1px_rgba(0,0,0,0.15)]"
      >
        Log in
      </button>
      <button type="button"
              class="font-['Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif] font-[700] border-0 rounded-[3em] cursor-pointer inline-block leading-none text-[12px] px-[16px] py-[10px] text-accent bg-primary"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;
